# openBank

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  nohup.out  test_oauth2.sh
dashboard/: README.md  index.html  package-lock.json  package.json  setup.sh  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: Header.tsx  Layout.tsx  RegisterForm.tsx  Sidebar.tsx  ToastProvider.tsx  TokenDisplayModal.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/lib/: api.ts
dashboard/src/pages/: APIExplorer.tsx  Dashboard.tsx  Documentation.tsx  Login.tsx  Projects.tsx  Settings.tsx
migrations/: 001_create_auth_tables.sql  004_enterprise_security.sql  004_identity_system.sql  20240101000001_create_users_and_accounts.sql  20240101000002_create_transactions.sql  20240101000003_create_verifications.sql  20240101000004_create_payments_and_virtual_accounts.sql  20250928000001_create_auth_plane.sql  20250929000001_fix_auth_schema.sql  20250929000002_add_company_title_to_developers.sql
models/: README.md  download_models.sh  face_recognition.onnx
postman_collection/: OpenBank_API.postman_collection.json  OpenBank_API_Simple.postman_collection.json  OpenBank_Development.postman_environment.json  README.md
src/: main.rs
src/auth/: controller.rs  middleware.rs  mod.rs  model.rs  repository.rs  scopes.rs  service.rs
src/balance/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/core/: audit.rs  config.rs  database.rs  error.rs  extractors.rs  middleware.rs  mod.rs  rate_limit.rs  rbac.rs  response.rs  security.rs
src/identity/: controller.rs  handlers.rs  ml_service.rs  mod.rs  model.rs  repository.rs  repository_new.rs  service.rs
src/income/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/payments/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/shared/: constants.rs  mod.rs  traits.rs  types.rs
src/transactions/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/user_data/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/virtual_accounts/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
tests/: README.md
tests/integration/: identity_tests.rs
