[package]
name = "openbank"
version = "0.1.0"
edition = "2021"
authors = ["OpenBank Contributors"]
description = "A Rust-based, fast, secure, open-source modular monolith fintech backend"
license = "MIT"
repository = "https://github.com/mubarakhammed/openBank"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
mongodb = "2.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and Time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# Rate limiting
governor = "0.6"

# OpenAPI documentation
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

# Async traits
async-trait = "0.1"

# ML & Computer Vision
candle-core = "0.9.1"
candle-onnx = "0.9.1"
candle-nn = "0.9.1"
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
ndarray = "0.15"
imageproc = "0.24"  # Image processing without OpenCV

# Vector similarity and embeddings
pgvector = "0.3"

# Additional security
ring = "0.17"
aes-gcm = "0.10"

# File handling and compression
bytes = "1.5"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"